--- a/ES6_app/index.html
+++ b/ES6_app/index.html
@@ -8,7 +8,8 @@
   <main>
     <section class="container">
 
-      <form class="add=user">
+
+      <form class="add-user">
         <label for="name">Name: <span class="required">*</span></label>
         <input type="text" id="name" name="name" value="" placeholder="Name" required="required" autofocus="autofocus" />
         <br /><br />
@@ -90,9 +91,11 @@
       </form>
 
       <article class="grid"></article>
+
+
+
     </section>
   </main>
-
   <script src="dist/bundle.js"></script>
 </body>
 </html>
